# ubl-master

./: .gitignore  ALIGNED_TASKLIST.md  ARCHITECTURE.md  Addendum_Certified_Runtime.md  Cargo.toml  Checklist_Operacional_Reinvencao_BIG.md  GOVERNANCE.md  Makefile  PRIORITY_TASKLIST.md  README.md  ROADMAP_DECADE.md  ROLLOUT_P0_TO_P1.md  ROLLOUT_P0_to_P1.md  SECURITY.md  START-HERE.md  TASKLIST.md  TASKLIST_FULL_PRAGMATIC.md  UNC-1.md  VCX-Core
.github/workflows/: ci.yml
crates/rb_vm/: Cargo.toml  README.md
crates/rb_vm/src/: canon.rs  disasm.rs  exec.rs  lib.rs  opcode.rs  types.rs
crates/rb_vm/tests/: laws.rs  num_opcodes.rs  prop_vm.rs
crates/ubl_ai_nrf1/: Cargo.toml
crates/ubl_ai_nrf1/examples/: gen_golden.rs
crates/ubl_ai_nrf1/src/: chip_format.rs  envelope.rs  lib.rs  nrf.rs
crates/ubl_ai_nrf1/tests/: golden_vectors.rs  rho_vectors.rs
crates/ubl_book_approve/: Cargo.toml
crates/ubl_book_approve/src/: display.rs  fs_store.rs  main.rs
crates/ubl_book_engine/: Cargo.toml
crates/ubl_book_engine/src/: ai_client.rs  critic.rs  generator.rs  lib.rs  revisor.rs  scheduler.rs  store.rs
crates/ubl_book_types/: Cargo.toml
crates/ubl_book_types/src/: lib.rs  project.rs  receipt.rs  review.rs  section.rs  state.rs
crates/ubl_canon/src/: lib.rs
crates/ubl_chipstore/: Cargo.toml
crates/ubl_chipstore/src/: backends.rs  indexing.rs  lib.rs  query.rs
crates/ubl_cli/: Cargo.toml
crates/ubl_cli/src/: main.rs
crates/ubl_eventstore/src/: lib.rs
crates/ubl_kms/: Cargo.toml
crates/ubl_kms/src/: lib.rs
crates/ubl_ledger/: Cargo.toml
crates/ubl_ledger/src/: lib.rs
crates/ubl_receipt/: Cargo.toml
crates/ubl_receipt/src/: lib.rs  pipeline_types.rs  unified.rs
crates/ubl_runtime/: Cargo.toml
crates/ubl_runtime/src/: advisory.rs  ai_passport.rs  auth.rs  capability.rs  circuit.rs  durable_store.rs  error_response.rs  event_bus.rs  genesis.rs  idempotency.rs  key_rotation.rs  knock.rs  ledger.rs  lib.rs  llm_observer.rs  manifest.rs  meta_chip.rs  outbox_dispatcher.rs  pipeline.rs  policy_bit.rs  policy_loader.rs  policy_lock.rs  rate_limit.rs  reasoning_bit.rs  rich_url.rs  silicon_chip.rs  transition_registry.rs  wasm_adapter.rs
crates/ubl_runtime/src/pipeline/: mod.rs  processing.rs  tests.rs  types.rs
crates/ubl_runtime/src/pipeline/stages/: check.rs  tests.rs  transition.rs  write_ahead.rs  write_finished.rs
crates/ubl_runtime/tests/: canon_guardrails.rs
crates/ubl_types/src/: lib.rs
crates/ubl_unc1/: Cargo.toml
crates/ubl_unc1/src/: lib.rs
docs/: INDEX.md  STANDARDS.md
docs/adr/: README.md
docs/archive/2026-02/: CHECKLIST_PATCH_RUNTIME.md  MANIFESTO_DE_REINVENCAO_BIG.md  README.md  TASKLIST_FULL_PRAGMATIC.md
docs/canon/: START-HERE-CANON.md
docs/changelog/: CHANGELOG.md
docs/lifecycle/: RELEASE_READINESS.md
docs/ops/: PRODUCTION_SLICE_CANARY.md  ROLLOUT_AUTOMATION.md
docs/reference/: API.md  CONFIG.md  ERRORS.md  README.md  numerics.md
docs/security/: CRYPTO_TRUST_MODEL.md
docs/visao/: MANIFESTO_DA_REINVENCAO.md  VCX-Realtime-Predictability-Protocol.md  VCX-Streaming-Editing-Protocol-v1.md  book-engine.md
docs/visao/vcx-pack-ubl/: Cargo.toml
docs/visao/vcx-pack-ubl/crates/vcx_pack/: Cargo.toml
docs/visao/vcx-pack-ubl/crates/vcx_pack/src/: lib.rs  realtime_predictability.rs  streaming_protocol.rs
docs/visao/vcx-pack-ubl/docs/: VCX_PACK_V1.md
docs/visao/vcx-pack-ubl/examples/: manifest.vcx.json
docs/visao/vcx-pack-ubl/examples/payloads/: tile0.ic0t
docs/visao/vcx-pack-ubl/tools/vcx_pack_cli/: Cargo.toml
docs/visao/vcx-pack-ubl/tools/vcx_pack_cli/src/: main.rs
docs/vm/: OPCODES_NUM.md
kats/silicon/: silicon_bit_always_allow.json  silicon_bit_context_equals.json  silicon_chip_payment_gate.json  silicon_circuit_sequential_all.json  silicon_compile_rb_vm.json
scripts/: production_slice_canary.sh  rollout_p0_p1_check.sh
services/ubl_gate/: Cargo.toml
services/ubl_gate/src/: main.rs  metrics.rs
services/ubl_gate/templates/: audit.html  audit_table.html  console.html  console_events.html  console_kpis.html  console_receipt.html  registry.html  registry_table.html  registry_type.html
