[package]
name = "rb_vm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "RB-VM: deterministic stack VM for Fractal (MVP)"
repository = ""

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[features]
default = []
