[package]
name = "ubl_book_approve"
version = "0.1.0"
edition = "2021"
description = "Human approval CLI for the UBL Book Engine"

[[bin]]
name = "book-approve"
path = "src/main.rs"

[dependencies]
ubl_book_types = { path = "../ubl_book_types" }
ubl_book_engine = { path = "../ubl_book_engine" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
