[package]
name = "ubl_book_engine"
version = "0.1.0"
edition = "2021"
description = "Workers for the UBL Book Engine (Generator, Critic, Scheduler, Revisor)"

[dependencies]
ubl_book_types = { path = "../ubl_book_types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
