[package]
name = "ubl_book_types"
version = "0.1.0"
edition = "2021"
description = "Canonical types for the UBL Book Engine — project specs, section state, receipts, reviews"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
