[package]
name = "ubl_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ublx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

ubl_ai_nrf1 = { path = "../ubl_ai_nrf1" }