[package]
name = "ubl_gate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ubl_gate"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

ubl_runtime = { path = "../../crates/ubl_runtime" }
ubl_ai_nrf1 = { path = "../../crates/ubl_ai_nrf1" }
ubl_chipstore = { path = "../../crates/ubl_chipstore" }
ubl_receipt = { path = "../../crates/ubl_receipt" }
prometheus = "0.13"
once_cell = "1.19"