[package]
name = "vcx_pack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

ubl_ai_nrf1 = { path = "../../vendor/ubl_ai_nrf1" }
