[package]
name = "vcx_pack_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
vcx_pack = { path = "../../crates/vcx_pack" }
ubl_ai_nrf1 = { path = "../../vendor/ubl_ai_nrf1" }
